Bug 479893 - Windows decorations and themes are not blurred when transparent themes are applied on both X11 and Wayland
Summary: Windows decorations and themes are not blurred when transparent themes are ap...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.92.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, wayland-only
Depends on:
Blocks:
 
Reported: 2024-01-16 13:44 UTC by Petar Nedyalkov
Modified: 2024-02-06 17:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KDE Plasma 6 (278.80 KB, image/jpeg)
2024-01-16 13:44 UTC, Petar Nedyalkov
Details
KDE Plasma 5 (1.65 MB, image/png)
2024-01-16 13:45 UTC, Petar Nedyalkov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Petar Nedyalkov 2024-01-16 13:44:51 UTC
Created attachment 164949 [details]
KDE Plasma 6

SUMMARY
Windows decorations and themes are not blurred when transparent themes are applied on both X11 and Wayland. Before reproducing the bug, we should apply the following example themes:
- Theme - Kvantum
- Kvantum theme - Kv Glass: https://store.kde.org/p/1201321
- Windows decoration - Glass-kv : https://store.kde.org/p/1201322/

or apply the following transparent color scheme:
https://store.kde.org/p/1972214


STEPS TO REPRODUCE (with color scheme only)
1. Go to the "System Settings" -> Colors & Themes -> Colors
2. Choose "Alpha" color theme.
3. Apply it.
4. Observe 

STEPS TO REPRODUCE (Kvantum)
Prerequisite: Apply 'Glass Kv' theme on Kvantum
1. Go to the "System Settings" -> Colors & Themes -> Application Style
2. Choose "Kvantum" and apply it.
3. Go to the "System Settings" -> Colors & Themes -> Windows decorations
4. Choose "Kv Glass" and apply it.
5. Observe.

OBSERVED RESULT
Windows decorations and themes are not blurred when transparent themes are applied on both X11 and Wayland.

EXPECTED RESULT
Windows decorations and themes are blurred when transparent themes are applied on both X11 and Wayland.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240114
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1
Kernel Version: 6.6.7-1-default (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Windows decorations and themes are blurred when transparent themes are applied on Plasma 5
Comment 1 Petar Nedyalkov 2024-01-16 13:45:55 UTC
Created attachment 164950 [details]
KDE Plasma 5
Comment 2 Vlad Zahorodnii 2024-01-23 13:20:59 UTC
The blur API in aurorae has changed in Plasma 6. See https://develop.kde.org/docs/plasma/aurorae/#blur

However, it also looks like blur regressed in Plasma 6
Comment 3 Bug Janitor Service 2024-01-23 13:24:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5024
Comment 4 Bug Janitor Service 2024-01-23 13:51:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5025
Comment 5 Vlad Zahorodnii 2024-01-24 08:25:41 UTC
Git commit f44484137eb379a9486f4c31165df611f02f16b7 by Vlad Zahorodnii.
Committed on 24/01/2024 at 09:24.
Pushed by vladz into branch 'master'.

plugins/blur: Fix blur behind decoration

Currently, if only blur behind decoration is enabled, no m_windows entry
is going to be created and so the blur effect won't blur the background.

M  +30   -22   src/plugins/blur/blur.cpp
M  +4    -1    src/plugins/blur/blur.h

https://invent.kde.org/plasma/kwin/-/commit/f44484137eb379a9486f4c31165df611f02f16b7
Comment 6 Vlad Zahorodnii 2024-01-24 08:46:08 UTC
Git commit e6685c0d21489f31dfdca8187de796c8e48a25ff by Vlad Zahorodnii.
Committed on 24/01/2024 at 09:36.
Pushed by vladz into branch 'Plasma/6.0'.

plugins/blur: Fix blur behind decoration

Currently, if only blur behind decoration is enabled, no m_windows entry
is going to be created and so the blur effect won't blur the background.
(cherry picked from commit f44484137eb379a9486f4c31165df611f02f16b7)

M  +30   -22   src/plugins/blur/blur.cpp
M  +4    -1    src/plugins/blur/blur.h

https://invent.kde.org/plasma/kwin/-/commit/e6685c0d21489f31dfdca8187de796c8e48a25ff
Comment 7 Petar Nedyalkov 2024-01-31 16:23:05 UTC
The issue is not fixed.
For retesting, I use Breeze window decoration and application style. 

STEPS TO REPRODUCE (with color scheme only)
1. Go to the "System Settings" -> Colors & Themes -> Colors
2. Choose "Alpha" color theme. (https://store.kde.org/p/1972214)
3. Apply it.
4. Observe

Blur effect is applied only on Konsole. All other kinds of KDE software are not blurred when we use a transparent themes.
https://i.imgur.com/6mGPN6X.png

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240128
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1
Kernel Version: 6.7.1-2-default (64-bit)
Session Type: Wayland

NOTE:
The same issue can be reproduced on Plasma 6.0 RC2 as well.
Comment 8 Vlad Zahorodnii 2024-01-31 20:33:43 UTC
> Breeze window decoration and application style

Breeze style doesn't support blurred background, you'll need to use a different decoration and application style.
Comment 9 Vlad Zahorodnii 2024-01-31 21:07:15 UTC
https://invent.kde.org/plasma/kwin/-/merge_requests/5024 fixed missing blur in aurorae decorations. Note that there was an API breaking change and window decorations that need blur should add the new mask element, as described in https://develop.kde.org/docs/plasma/aurorae/#blur

It's not enough to use a color scheme with translucent colors, the widget style should request blur. Breeze doesn't do it because it's not part of its design language. You would need to use a widget style that supports blur.

kvantum supports blur but it seems like it enables blur only for certain windows. For example, kvantum manager gets blurred background but dolphin and other applications don't. Neither such application attempts to request blur, I confirmed it by analyzing WAYLAND_DEBUG output.

If apps miss blurred background with kvantum style, I recommend to report this issue to kvantum developers. I don't think there's something that we can do on the compositor side. Aurorae decorations regressed, but that was fixed.
Comment 10 Petar Nedyalkov 2024-02-06 17:19:50 UTC
Thank you for letting me know,  Vlad Zahorodnii!