plugins/blur: Fix blur behind decoration

Currently, if only blur behind decoration is enabled, no m_windows entry
is going to be created and so the blur effect won't blur the background.

BUG: 479893
(cherry picked from commit f44484137eb379a9486f4c31165df611f02f16b7)